# docker-images

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .skjoldignore  LICENSE.md  README.md  dibber.toml  pyproject.toml  settings.py  setup.cfg  use-apt-cache.sh
.github/: keepalive.txt
.github/workflows/: build-and-upload.yaml  keepalive.yaml  pre-commit.yaml  scan-images.yaml  validate-build.yaml
.src/docker_build/: images.py  main.py  utils.py  validation.py
apt-cache/apt-cache/: Dockerfile  entrypoint.sh
apt-cache/apt-cache/apt-cacher-ng/: acng.conf  backends_aquasecurity  backends_google  backends_microsoft  backends_nodesource  backends_xpra  backends_yarn
cache/cache/: Dockerfile  entrypoint.sh
cache/cache/apt-cacher-ng/: acng.conf  backends_docker  backends_google_cloud  backends_sublime_text
nginx-base/alpine-nginx/: Dockerfile  config.yaml  nginx.conf
nodejs-base/ubuntu20.04-node14/: Dockerfile  config.yaml
nodejs-base/ubuntu20.04-node16/: Dockerfile  config.yaml
nodejs-base/ubuntu22.04-node16/: Dockerfile  config.yaml
nodejs-base/ubuntu22.04-node18/: .trivyignore  Dockerfile  config.yaml
nodejs-base/ubuntu22.04-node20/: .trivyignore  Dockerfile  config.yaml
nodejs-base/ubuntu24.04-node22/: Dockerfile
pypi-cache/pypi-cache/: .trivyignore  40-generate-keys.sh  Dockerfile  site.conf
python-base/ubuntu20.04-pyston2.2/: .trivyignore  Dockerfile  config.yaml
python-base/ubuntu20.04-python3.9/: Dockerfile  config.yaml
python-base/ubuntu20.04-python3.9-nginx/: Dockerfile  config.yaml
python-base/ubuntu20.04-python3.9-nginx-node/: .trivyignore  Dockerfile  config.yaml
python-base/ubuntu20.04-python3.9-rust/: Dockerfile  config.yaml
python-base/ubuntu22.04-python3.10/: .trivyignore  Dockerfile  config.yaml
python-base/ubuntu22.04-python3.10-nginx/: Dockerfile  config.yaml
python-base/ubuntu22.04-python3.10-nginx-node/: config.yaml
python-base/ubuntu22.04-python3.10-nginx-node16/: .trivyignore  config.yaml
python-base/ubuntu22.04-python3.10-nginx-node18/: .trivyignore  Dockerfile  config.yaml
python-base/ubuntu22.04-python3.10-rust/: Dockerfile  config.yaml
python-base/ubuntu22.04-python3.11/: .trivyignore  Dockerfile  config.yaml
python-base/ubuntu24.04-python3.13/: Dockerfile
ubuntu-base/20.04/: Dockerfile  config.yaml
ubuntu-base/22.04/: Dockerfile
ubuntu-base/24.04/: Dockerfile
(+35 files in other folders)
