[tool.poetry]
name = "docker-images"
version = "1.0.0"
description = "Docker image manager"
authors = ["Janne Enberg <janne.enberg@lietu.net>"]
license = "BSD"
packages = [{ include = "docker_build", from = ".src" }]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
pytest = "^7.2.0"
pydantic = "^1.10.2"
PyYAML = "^6.0"
loguru = "^0.6.0"
humanize = "^4.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
build = "docker_build.main:build"
docker_username = "docker_build.main:docker_username"
list = "docker_build.main:list"
scan = "docker_build.main:scan"
upload = "docker_build.main:upload"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
